updated with div by 0, dec and del keys

--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
 </head>
 <body>
     <div class="calculator">
+        <div class="calcBorder">
     <div id="screen">
-        <p id="screenTextTop"> </p>
-        <p id="screenTextBot">0</p>
+        <div class="screenText" id="screenTextTop"></div>
+        <div class="screenText" id="screenTextBot">0</div>
     </div>
     <div id="buttonDiv">
         <div id="row1">
@@ -20,30 +21,34 @@
             <button id="delete">Delete</button>
         </div>
         <div id="row2">
-            <button id="seven" data-number="7">7</button>
-            <button id="eight" data-number="8">8</button>
-            <button id="nine" data-number="9">9</button>
+            <button class="num" id="seven" data-number="7">7</button>
+            <button class="num" id="eight" data-number="8">8</button>
+            <button class="num" id="nine" data-number="9">9</button>
             <button id="divide" data-op="÷">÷</button>
         </div> 
         <div id="row3">
-            <button id="four" data-number="4">4</button>
-            <button id="five" data-number="5">5</button>
-            <button id="six" data-number="6">6</button>
+            <button class="num" id="four" data-number="4">4</button>
+            <button class="num" id="five" data-number="5">5</button>
+            <button class="num" id="six" data-number="6">6</button>
             <button id="multiply" data-op="*">*</button>
         </div>
         <div id="row4">
-            <button id="one" data-number="1">1</button>
-            <button id="two" data-number="2">2</button>
-            <button id="three" data-number=""3>3</button>
+            <button class="num" id="one" data-number="1">1</button>
+            <button class="num" id="two" data-number="2">2</button>
+            <button class="num" id="three" data-number=""3>3</button>
             <button id="subtract" data-op="-">-</button>
         </div>
         <div id="row5">
-            <button id="zero" data-number="0">0</button>
-            <button id="decimal">.</button>
+            <button class="num" id="zero" data-number="0">0</button>
+            <button class="num" id="decimal">.</button>
             <button id="equal">=</button>
             <button id="plus" data-op="+">+</button>
         </div>
+        <div id="warning">
+            <div id="warningText"></div>
+        </div>
     </div>
+</div>
 </div>
 </body>
 </html>
